src/objects/Questionnaire_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Frequency_Days__c</fullName>
        <description>Set questionnaire frequency of the day</description>
        <label>Frequency Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Schedule</relationshipLabel>
        <relationshipName>Questionnaire_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Query__c</fullName>
        <description>Storing user query information.</description>
        <label>User Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Questionnaire Schedule</label>
    <nameField>
        <displayFormat>QS-{0000}</displayFormat>
        <label>Questionnaire Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>